# computer-vision-tools

./: README.md  backcpp.py  baiduapi.py  bnToCov.py  cmd  convertdata.py  convertimg.py  convertmodeltoonnx.py  copyirpicinonedir.py  copyirpicinonedir2.py  cropimgvoc.py  fc1_plate.py  get20190122.py  getceleba.py  getcropimg.py  getdir.py  gethsv.py  getimgfromavi.py  getliveness.py  getorg.py  getpicforhisi.py  getpicfromurl.py  gettraindata.py  gettxt.py  getvocfromdarknet.py  hist.py  image_augmentation_pos.py  picEnhancerotatea.py  printpytorchshape.py  readpic.py  readresult.py  readrtsp.py  rename2.py  sv-x-softmaxbaseinsightface.py  testtime.py  voc2cascadernn.py  voc2coco.py  vocgetoneclass.py
compare/: CMakeLists.txt  computescore.cpp
enhancepic/: ColorSpace.cpp  ColorSpace.hpp  Curves.cpp  Curves.hpp  Dir.cpp  Dir.hpp  HSL.hpp  createpic.cpp
